<resources>
    <string name="backup_wallet">Backup funds</string>
    <string name="upgrade_wallet">Upgrade</string>
    <string name="change_pin">Change PIN</string>
    <string name="app_name">Blockchain</string>
    <string name="action_settings">Settings</string>
    <string name="all_accounts">All</string>
    <string name="please_wait">Please wait</string>
    <string name="send_bitcoin">Send</string>
    <string name="receive_bitcoin">Receive</string>
    <string name="blockchain">Blockchain</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="polite_no">No thanks</string>
    <string name="YESTERDAY">Yesterday</string>
    <string name="TODAY">Today</string>
    <string name="AGO">ago</string>
    <string name="SENT">Sent</string>
    <string name="RECEIVED">Received</string>
    <string name="MOVED">Transferred</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="options_id">Wallet ID</string>
    <string name="options_id2">Wallet ID</string>
    <string name="preferences_about_title">About Us</string>
    <string name="about_us">About us</string>
    <string name="ask_you_sure_unpair">Are you sure you want to unpair your device?</string>
    <string name="select_currency">Select Currency</string>
    <string name="options_currency">Local Currency</string>
    <string name="options_currency2">Your preferred fiat currency</string>
    <string name="options_mnemonic">Show Mnemonic</string>
    <string name="options_mnemonic2">Show mnemonic for this wallet</string>
    <string name="options_units">Bitcoin Unit</string>
    <string name="options_units2">BTC, mBTC or bits</string>
    <string name="options_tos">Terms of Service</string>
    <string name="options_tos2">Blockchain Android Bitcoin Wallet terms of service</string>
    <string name="options_privacy">Privacy Policy</string>
    <string name="options_privacy2">Blockchain privacy policy</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_mobile">Invalid mobile phone number</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_guid">Invalid Wallet ID</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="change_password_new_matches_current">You can\'t use your current password as your new password</string>
    <string name="no_private_key">Cannot produce private key.</string>
    <string name="pin_4_strikes">4 failed PIN attempts. Please provide password.</string>
    <string name="pin_4_strikes_password_accepted">Password accepted. Please define new PIN.</string>
    <string name="bip38_password_entry">Please enter private key password</string>
    <string name="pin_entry">Enter PIN</string>
    <string name="password_entry">Please enter password</string>
    <string name="options_CLEAR">CLEAR</string>
    <string name="options_FORGOT_PIN">FORGOT PIN</string>
    <string name="zero_pin">0000 is an invalid PIN. Please try again.</string>
    <string name="invalid_pin">Invalid PIN. Please try again.</string>
    <string name="pin_mismatch_error">PINs do not match</string>
    <string name="create_pin">Create PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="create_pin_failed">PIN creation failed. Please pair device again.</string>
    <string name="pairing_failed">Pairing failed. Please try again.</string>
    <string name="pairing_failed_decrypt_error">Pairing failed. Decryption error.</string>
    <string name="check_connectivity_exit">Blockchain Wallet cannot obtain an Internet connection. Please check the connectivity on your device and try again.</string>
    <string name="dialog_continue">Continue</string>
    <string name="cannot_edit_imported_label">Imported addresses label cannot be edited</string>
    <string name="double_encryption_password_error">Double encrypt password error. Please try again.</string>
    <string name="command2">Scan pairing code</string>
    <string name="command3">I can\'t access my camera</string>
    <string name="CREATE">CREATE NEW WALLET</string>
    <string name="LOGIN">Log in to my Wallet</string>
    <string name="pair_your_wallet">Pair Your Wallet</string>
    <string name="scan_pairing_code">Scan pairing code</string>
    <string name="manual_pairing">Manual Pairing</string>
    <string name="pair_wallet_step_1">Log in to your Blockchain Wallet via your PC or Mac at https://blockchain.info/wallet.</string>
    <string name="pair_wallet_step_2">If you’re using the old wallet, click the Account Settings button and choose the Devices tab. If you’re using our new beta wallet, go to Settings / Wallet Information.</string>
    <string name="pair_wallet_step_3">Click Show Pairing Code to reveal a QR Code, a square black &amp; white barcode. Scan the code with your camera.</string>
    <string name="disable_two_factor">You must disable two-factor authentication before attempting to manually pair your wallet</string>
    <string name="wallet_id">Wallet ID</string>
    <string name="default_wallet_name">My Bitcoin Wallet</string>
    <string name="recover_funds">Recover Funds</string>
    <string name="recover_funds_warning_message">You should always pair or login if you have access to your Wallet ID and password. Recovering your funds will create a new Wallet ID. Would you like to continue?</string>
    <string name="recover_funds_instructions">Enter your 12 recovery words with spaces to recover your funds &amp; transactions</string>
    <string name="recovery_passphrase">Recovery passphrase</string>
    <string name="invalid_recovery_phrase">Invalid recovery phrase. Please try again</string>
    <string name="creating_wallet">Creating wallet</string>
    <string name="restore_failed">Restoring wallet failed. Please try again</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="agree_terms_of_service">By creating a new wallet you agree to the</string>
    <string name="blockchain_tos">Blockchain Terms of Service</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="new_wallet">New Wallet</string>
    <string name="strength_weak">Weak</string>
    <string name="strength_medium">Regular</string>
    <string name="strength_strong">Strong</string>
    <string name="strength_normal">Normal</string>
    <string name="CONTINUE">Continue</string>
    <string name="SEND">SEND</string>
    <string name="CONFIRM_PAYMENT">CONFIRM PAYMENT</string>
    <string name="GO_BACK">GO BACK</string>
    <string name="total">Total</string>
    <string name="no_funds_available">No funds available for this account</string>
    <string name="no_funds_available2">No funds available for this address</string>
    <string name="max_available">Use total available minus fee:</string>
    <string name="invalid_bitcoin_address">Invalid Bitcoin address</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="enter_double_encryption_pw">Please enter double encryption password</string>
    <string name="send_payment_code">Send payment code</string>
    <string name="edit_label">Edit label</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate us</string>
    <string name="email_chooser">Send e-mail...</string>
    <string name="about">Blockchain Wallet %1$s\n©%2$s Blockchain.info</string>
    <string name="merchant_download">Free Merchant app</string>
    <string name="feedback">Send Feedback</string>
    <string name="password_or_wipe">Enter using your password or forget this wallet</string>
    <string name="use_password">Use password</string>
    <string name="wipe_wallet">Forget wallet</string>
    <string name="select_units">Select BTC units</string>
    <string name="weak_password">The selected password is too weak to secure your funds. We strongly suggest you select a different one. Would you like to define a new password?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="confirm_details">Confirm Payment</string>
    <string name="fee">Fee</string>
    <string name="dialog_send">SEND</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_priority_fee">SEND W/ PRIORITY FEE</string>
    <string name="exit_confirm">Press back button again to exit</string>
    <string name="label_address">Your address has been imported successfully. Optionally assign a friendly display name to this address.</string>
    <string name="label_address2">Your address has been created successfully. Optionally assign a friendly display name to this address.</string>
    <string name="bip38_error">Invalid private key password</string>
    <string name="privkey_error">Unrecognized private key format</string>
    <string name="hd_error">HD wallet error</string>
    <string name="scan_not_recognized">Scan cannot be decoded</string>
    <string name="imported_addresses">Imported Addresses</string>
    <string name="account_colon">Account:</string>
    <string name="created_account_colon">Created account:</string>
    <string name="tx_length_error">Blockchain wallet cannot handle transactions over 100KB in size. Please try splitting your transaction.</string>
    <string name="invalid_tx">Invalid transaction attempt</string>
    <string name="remote_save_ok">Remote save OK</string>
    <string name="remote_save_ko">Remote save failed</string>
    <string name="payload_corrupted">Remote payload corrupted, not saved to server.</string>
    <string name="my_bitcoin_wallet">Blockchain Wallet</string>
    <string name="business_name">Business name</string>
    <string name="select_category">Category</string>
    <string name="business_category">Category</string>
    <string name="street_address">Street address</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string name="telephone">Telephone</string>
    <string name="web">Web</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="get_location">I am here. Use my location.</string>
    <string name="addresses">Addresses</string>
    <string name="merchant_map">Merchant Map</string>
    <string name="START">START</string>
    <string name="backup_write_down_words">It is important to make sure you write down your words exactly as they appear here and in this order.</string>
    <string name="NEXT_WORD">NEXT WORD</string>
    <string name="press_to_reveal">press and hold to reveal the word</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="transaction_occur_when">Transactions occur when you receive and send bitcoin.</string>
    <string name="click">Click</string>
    <string name="to_start_sending_and_receiving_btc">to start sending and receiving bitcoin.</string>
    <string name="disable_root_warning">Disable rooted device warning</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_funds">Transfer Funds</string>
    <string name="transfer_recommend">For your safety, we recommend you to transfer any balances in your imported addresses into your Blockchain wallet.</string>
    <string name="transfer_funds_safe">Your transferred funds will be safe and secure, and you’ll benefit from increased privacy and convenient backup and recovery features.</string>
    <string name="dont_ask_again">Don\'t ask me again.</string>
    <string name="not_now">Not now</string>
    <string name="logout">Logout</string>
    <string name="mobile">Mobile</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="app">App</string>
</resources>