<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/profile"
            android:key="pref_key_storage_settings">
        <Preference
                android:title="@string/email"
                android:key="email"
        />
        <Preference
                android:title="@string/mobile"
                android:key="mobile"
        />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/wallet">
        <Preference
                android:title="@string/options_id"
                android:key="guid"
        />
        <Preference
                android:title="@string/options_units"
                android:key="units"
        />
        <Preference
                android:title="@string/options_currency"
                android:key="fiat"
        />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/app"
            android:key="app">
        <Preference
                android:title="@string/preferences_about_title"
                android:key="about"
        />
        <Preference
                android:title="@string/options_tos"
                android:key="tos"
        />
        <Preference
                android:title="@string/options_privacy"
                android:key="privacy"
        />
        <CheckBoxPreference
                android:title="@string/disable_root_warning"
                android:key="disable_root_warning"
        />
    </PreferenceCategory>

</PreferenceScreen>
