<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/submenu_1">
        <item
                android:id="@+id/nav_upgrade"
                android:icon="@drawable/ic_info_outline_grey600_24dp"
                android:title="@string/upgrade_wallet" />

        <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/bad_backup"
                android:title="@string/backup_wallet" />

        <item
                android:id="@+id/nav_addresses"
                android:icon="@drawable/ic_person_grey600_24dp"
                android:title="@string/addresses" />

        <item
                android:id="@+id/nav_map"
                android:icon="@drawable/icon_merchantdirectory"
                android:title="@string/merchant_map" />

    </group>

    <group android:id="@+id/submenu_2">

        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/icon_settings"
                android:title="@string/action_settings" />

        <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_help_grey600_24dp"
                android:title="@string/support" />

        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/icon_logout"
                android:title="@string/logout" />

    </group>

</menu>