<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="420dp"
    android:orientation="vertical"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="420dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:padding="20dp"
    >
    
 <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
  <TextView android:text="@string/business_name" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip" /> 
  <EditText android:id="@+id/name" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="3dip"  android:singleLine="true"  /> 
  </LinearLayout>

 <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
  <TextView android:text="@string/business_category" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip" /> 
 <Spinner
        android:id="@+id/category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/select_category"
        android:textStyle="bold"
        
        />
 </LinearLayout>

 <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
  <TextView android:text="@string/description" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip" /> 
  <EditText android:id="@+id/description" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="3dip"   android:singleLine="true" /> 
  </LinearLayout>
    
 <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
  <TextView android:text="@string/street_address" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip" /> 
  <EditText android:id="@+id/street_address" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="3dip"  android:singleLine="true" /> 
  </LinearLayout>
 
 <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
  <TextView android:text="@string/city" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip" /> 
  <EditText android:id="@+id/city" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="3dip"  android:singleLine="true" /> 
  </LinearLayout>
 
  <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
  <TextView android:text="@string/zip" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip" /> 
  <EditText android:id="@+id/zip" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="3dip"  android:singleLine="true" /> 
  </LinearLayout>
 
  <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
  <TextView android:text="@string/telephone" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip" /> 
  <EditText android:id="@+id/telephone" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="3dip"  android:singleLine="true" /> 
  </LinearLayout>
 
  <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
  <TextView android:text="@string/web" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip" /> 
  <EditText android:id="@+id/web" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="3dip"  android:singleLine="true" /> 
  </LinearLayout>

 <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
 <Button android:id="@+id/location" android:layout_height="50dip" android:layout_width="fill_parent" android:text="@string/get_location" />
 </LinearLayout>
 
 <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"     
      android:layout_height="wrap_content" />
  
  <LinearLayout android:id="@+id/lat_layout"  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
  <TextView android:text="@string/latitude" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip" /> 
  <TextView android:id="@+id/latitude" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="3dip"  android:singleLine="true" /> 
  </LinearLayout>
 
  <LinearLayout android:id="@+id/lon_layout"  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
  <TextView android:text="@string/longitude" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip" /> 
  <TextView android:id="@+id/longitude" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="3dip"  android:singleLine="true" /> 
  </LinearLayout>
 
 <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
 <Button android:id="@+id/cancel" android:layout_height="50dip" android:layout_width="wrap_content" android:text="@string/cancel" />
 <Button android:id="@+id/ok" android:layout_height="50dip" android:layout_width="fill_parent" android:text="@string/ok" />
 </LinearLayout>
    
</LinearLayout>
</ScrollView> 
