<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blockchain_pearl_white"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/transfer_funds"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="24sp"/>

            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_recommend"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/primary_dark_material_dark"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_funds_safe"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/primary_dark_material_dark"/>

        </LinearLayout>

        <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/confirm_dont_ask_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_ask_again"
                android:layout_marginLeft="18dp"
                android:gravity="center|left"
                android:textColor="@color/primary_text_default_material_light"/>

        <LinearLayout
                style="@style/CustomDialogButtonContainer">

            <android.support.v7.widget.AppCompatButton
                    style="@style/CustomDialogButton"
                    android:id="@+id/confirm_cancel"
                    android:text="@string/not_now"
                    android:textColor="@color/primary_text_default_material_light"/>

            <android.support.v7.widget.AppCompatButton
                    style="@style/CustomDialogButton"
                    android:id="@+id/confirm_send"
                    android:text="@string/transfer"
                    android:textColor="@color/blockchain_blue"/>

        </LinearLayout>
    </LinearLayout>
</layout>