<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/blockchain_blue"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:fontFamily="sans-serif"
		android:paddingBottom="16dp"
		android:paddingLeft="72dp"
		android:paddingRight="72dp"
		android:paddingTop="72dp"
		android:text="@string/backup_write_down_words"
		android:textColor="@color/white"
		android:textSize="12sp"/>

	<TextView
		android:id="@+id/tv_current_word"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:alpha=".35"
		android:gravity="center"
		android:text="Word 0 of 12"
		android:textColor="@color/white"/>

	<LinearLayout
		android:id="@+id/card_layout"
		android:layout_width="match_parent"
		android:layout_height="128dp"
		android:layout_marginBottom="10dp"
		android:layout_marginEnd="72dp"
		android:layout_marginLeft="72dp"
		android:layout_marginRight="72dp"
		android:layout_marginStart="72dp"
		android:layout_marginTop="10dp"
		android:background="@color/backup_card_blue"
		android:gravity="center">

		<TextView
			android:id="@+id/tv_press_reveal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:alpha=".45"
			android:gravity="center"
			android:padding="16dp"
			android:textSize="14sp"
			android:text="@string/press_to_reveal"
			android:textColor="@color/white"/>

	</LinearLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/start_action"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_centerInParent="true"
			android:background="@drawable/selector_white"
			android:clickable="true"
			android:fontFamily="sans-serif"
			android:paddingBottom="10dp"
			android:paddingLeft="32dp"
			android:paddingRight="32dp"
			android:paddingTop="10dp"
			android:text="@string/START"
			android:textColor="@color/primary_text_default_material_light"
			android:textSize="14sp"/>

		<TextView
			android:id="@+id/next_word_action"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_alignParentRight="true"
			android:clickable="true"
			android:background="@drawable/selector_b_blue"
			android:fontFamily="sans-serif"
			android:paddingBottom="10dp"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:paddingTop="10dp"
			android:text="@string/NEXT_WORD"
			android:textColor="@color/white"
			android:textSize="14sp"/>
	</RelativeLayout>

</LinearLayout>